devtools/client/netmonitor/src/assets/styles/RequestList.css
/* ... */
/
*
Start
Time
column
*
/
.
requests
-
list
-
start
-
time
{
width
:
8
%
;
}
/
*
End
Time
column
*
/
.
requests
-
list
-
end
-
time
{
width
:
8
%
;
}
/
*
Response
Time
column
*
/
.
requests
-
list
-
response
-
time
{
width
:
10
%
;
}
/
*
Duration
column
*
/
.
requests
-
list
-
duration
-
time
{
width
:
8
%
;
}
/
*
Latency
column
*
/
.
requests
-
list
-
latency
-
time
{
width
:
8
%
;
}
/
*
Response
header
columns
*
/
.
requests
-
list
-
response
-
header
{
width
:
10
%
;
}
/
*
Domain
column
*
/
.
requests
-
list
-
domain
{
width
:
30
%
;
}
.
requests
-
list
-
domain
.
requests
-
list
-
column
{
text
-
align
:
start
;
}
.
requests
-
security
-
state
-
icon
{
display
:
inline
-
block
;
width
:
16px
;
height
:
16px
;
margin
:
0
4px
;
vertical
-
align
:
text
-
bottom
;
}
.
request
-
list
-
item
.
selected
.
requests
-
security
-
state
-
icon
{
filter
:
brightness
(
1
.
3
)
;
}
.
security
-
state
-
insecure
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
insecure
.
svg
)
;
}
.
security
-
state
-
secure
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
secure
.
svg
)
;
}
.
security
-
state
-
weak
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
weak
.
svg
)
;
}
.
security
-
state
-
broken
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
security
-
state
-
broken
.
svg
)
;
}
.
security
-
state
-
local
{
background
-
image
:
url
(
chrome
:
/
/
devtools
/
skin
/
images
/
globe
.
svg
)
;
}
/
*
RemoteIP
column
*
/
.
requests
-
list
-
remoteip
{
width
:
9
%
;
}
/
*
Cause
column
*
/
.
requests
-
list
-
cause
{
min
-
width
:
75px
;
}
.
requests
-
list
-
cause
-
stack
{
display
:
inline
-
block
;
background
-
color
:
var
(
-
-
theme
-
body
-
color
-
alt
)
;
color
:
var
(
-
-
theme
-
body
-
background
)
;
font
-
size
:
8px
;
font
-
weight
:
bold
;
line
-
height
:
10px
;
border
-
radius
:
3px
;
padding
:
0
2px
;
margin
:
0
;
margin
-
inline
-
end
:
3px
;
}
/
*
Type
column
*
/
.
requests
-
list
-
type
{
min
-
width
:
65px
;
}
/
*
Transferred
column
*
/
.
requests
-
list
-
transferred
{
min
-
width
:
110px
;
}
/
*
Size
column
*
/
.
requests
-
list
-
size
{
min
-
width
:
80px
;
}
/
*
Waterfall
column
*
/
.
requests
-
list
-
waterfall
{
width
:
25vw
;
max
-
width
:
25vw
;
min
-
width
:
25vw
;
background
-
repeat
:
repeat
-
y
;
background
-
position
:
left
center
;
/
*
Background
created
on
a
<
canvas
>
in
js
.
*
/
/
*
see
devtools
/
client
/
netmonitor
/
src
/
waterfall
-
background
.
js
*
/
background
-
image
:
-
moz
-
element
(
#
waterfall
-
background
)
;
}
.
requests
-
list
-
waterfall
:
dir
(
rtl
)
{
background
-
position
:
right
center
;
}
.
requests
-
list
-
waterfall
>
.
requests
-
list
-
header
-
button
{
padding
-
inline
-
start
:
0
;
}
.
requests
-
list
-
waterfall
>
.
requests
-
list
-
header
-
button
>
.
button
-
text
{
width
:
auto
;
}
.
requests
-
list
-
waterfall
-
label
-
wrapper
:
not
(
.
requests
-
list
-
waterfall
-
visible
)
{
padding
-
inline
-
start
:
16px
;
}
.
requests
-
list
-
timings
-
division
{
display
:
inline
-
block
;
padding
-
inline
-
start
:
4px
;
font
-
size
:
75
%
;
pointer
-
events
:
none
;
text
-
align
:
start
;
}
:
root
[
platform
=
"
win
"
]
.
requests
-
list
-
timings
-
division
{
padding
-
top
:
1px
;
font
-
size
:
90
%
;
}
.
requests
-
list
-
timings
-
division
:
not
(
:
first
-
child
)
{
border
-
inline
-
start
:
1px
dashed
;
}
.
requests
-
list
-
timings
-
division
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
-
division
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
.
theme
-
dark
.
requests
-
list
-
timings
-
division
{
border
-
inline
-
start
-
color
:
#
5a6169
!
important
;
}
.
theme
-
light
.
requests
-
list
-
timings
-
division
{
border
-
inline
-
start
-
color
:
#
585959
!
important
;
}
.
requests
-
list
-
timings
-
division
[
data
-
division
-
scale
=
second
]
.
requests
-
list
-
timings
-
division
[
data
-
division
-
scale
=
minute
]
{
font
-
weight
:
600
;
}
.
requests
-
list
-
timings
{
transform
:
scaleX
(
var
(
-
-
timings
-
scale
)
)
;
}
.
requests
-
list
-
timings
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
.
requests
-
list
-
timings
-
box
{
display
:
inline
-
block
;
height
:
9px
;
}
.
requests
-
list
-
timings
-
box
.
blocked
{
background
-
color
:
var
(
-
-
timing
-
blocked
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
dns
{
background
-
color
:
var
(
-
-
timing
-
dns
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
connect
{
background
-
color
:
var
(
-
-
timing
-
connect
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
ssl
{
background
-
color
:
var
(
-
-
timing
-
ssl
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
send
{
background
-
color
:
var
(
-
-
timing
-
send
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
wait
{
background
-
color
:
var
(
-
-
timing
-
wait
-
color
)
;
}
.
requests
-
list
-
timings
-
box
.
receive
{
background
-
color
:
var
(
-
-
timing
-
receive
-
color
)
;
}
.
requests
-
list
-
timings
-
total
{
display
:
inline
-
block
;
padding
-
inline
-
start
:
4px
;
font
-
size
:
85
%
;
font
-
weight
:
600
;
white
-
space
:
nowrap
;
/
*
This
node
should
not
be
scaled
-
apply
a
reversed
transformation
*
/
transform
:
scaleX
(
var
(
-
-
timings
-
rev
-
scale
)
)
;
text
-
align
:
left
;
}
.
requests
-
list
-
timings
-
total
:
dir
(
ltr
)
{
transform
-
origin
:
left
center
;
}
.
requests
-
list
-
timings
-
total
:
dir
(
rtl
)
{
transform
-
origin
:
right
center
;
}
/
*
Request
list
item
*
/
.
request
-
list
-
item
{
position
:
relative
;
/
*
display
:
table
-
row
;
Bug
1431132
:
Disabling
this
rule
is
surprising
as
we
no
longer
have
"
rows
"
.
But
this
helps
preventing
reflowing
the
whole
requests
list
anytime
we
append
a
new
request
/
row
.
*
/
height
:
24px
;
line
-
height
:
24px
;
}
/* ... */

