Bug 1454880 - Make the Domain and Cause column more readable r=Honza
MozReview-Commit-ID: 3vq1LqGQY3Y

UltraBlame original commit: f97e87302374a8a9e4f76e7a3a5fc65206262c01

--- a/devtools/client/netmonitor/src/assets/styles/RequestList.css
+++ b/devtools/client/netmonitor/src/assets/styles/RequestList.css
@@ -2048,6 +2048,12 @@ list
 -
 domain
 {
+min
+-
+width
+:
+100px
+;
 width
 :
 30
@@ -2336,6 +2342,32 @@ min
 width
 :
 75px
+;
+}
+.
+request
+-
+list
+-
+item
+.
+requests
+-
+list
+-
+cause
+.
+requests
+-
+list
+-
+column
+{
+padding
+-
+left
+:
+5px
 ;
 }
 .
